logo placeholder and header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-hex: #000000;
+  --background-start-hex: #fae0e4;
+  --background-end-hex: #ff0a54;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -42,9 +42,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-hex: #ffffff;
+    --background-start-hex: #5D4259;
+    --background-end-hex: #352D40;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -86,13 +86,13 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--foreground-hex));
   background: linear-gradient(
       to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
+      var(--background-start-hex),
+      var(--background-end-hex)
     )
-    rgb(var(--background-start-rgb));
+    var(--background-start-hex);
 }
 
 a {
