--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-hex: #000000;
-  --background-start-hex: #fae0e4;
-  --background-end-hex: #ff0a54;
+  --foreground-hex: var(--mantine-color-white);
+  --background-start-hex: var(--mantine-color-pink-1);
+  --background-end-hex: var(--mantine-color-pink-4);
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -42,9 +42,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-hex: #ffffff;
-    --background-start-hex: #5D4259;
-    --background-end-hex: #352D40;
+    --foreground-hex: var(--mantine-color-black);
+    --background-start-hex: var(--mantine-color-pink-5);
+    --background-end-hex: var(--mantine-color-pink-9);
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
