--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  justify-content: center;
   padding: 6rem;
-  min-height: 100vh;
+  height: calc(100vh - rem(56px));
 }
 
 .description {
