--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,6 @@
 .header {
   height: rem(56px);
-  margin-bottom: rem(120px);
+  /* margin-bottom: rem(120px); */
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
@@ -33,6 +33,19 @@
   [data-mantine-color-scheme] &[data-active] {
     background-color: var(--mantine-color-pink-filled);
     color: var(--mantine-color-white);
+  }
+}
+
+.drawerLink {
+  padding: rem(8px) rem(12px);
+}
+.subLink {
+  width: 100%;
+  padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
+  border-radius: var(--mantine-radius-md);
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
   }
 }
 
