--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -14,6 +14,9 @@
 }
 
 .logo {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
   position: relative;
 
   @media (prefers-color-scheme: dark) {
