--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
       var(--background-start-hex),
       var(--background-end-hex)
     )
-    var(--foreground-hex);
+    var(--mantine-color-body);
 }
 
 a {
