--- a/src/app/info/getStarted/page.module.css
+++ b/src/app/info/getStarted/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  height: calc(100vh - rem(56px));
+  height: calc(100% - rem(56px));
 
   @media (max-width: $mantine-breakpoint-sm) {
     padding: 2rem;
