--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   padding: 6rem;
-  height: calc(100vh - rem(56px));
+  height: calc(100% - rem(56px));
 
   @media (max-width: $mantine-breakpoint-sm) {
     padding: 2rem;
