--- a/src/components/card/imageCard/imageCard.module.css
+++ b/src/components/card/imageCard/imageCard.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  background-size: 50%;
+  background-size: 220px;
   background-image: url(/pattern.svg);
 }
 
