--- a/src/components/card/horizontalCard/horizontalCard.module.css
+++ b/src/components/card/horizontalCard/horizontalCard.module.css
@@ -2,6 +2,11 @@
   background-color: var(--mantine-color-body);
 }
 
+.imageCol {
+  height: 200px;
+  overflow: hidden
+}
+
 .title {
   font-weight: bold;
   font-family:
