--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
   --background-start-hex: var(--mantine-color-pink-1);
   --background-end-hex: var(--mantine-color-pink-4);
 
+  --foreground-hex-dark: var(--mantine-color-black);
+  --background-start-hex-dark: var(--mantine-color-pink-5);
+  --background-end-hex-dark: var(--mantine-color-pink-9);
+
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
@@ -40,39 +44,6 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-hex: var(--mantine-color-black);
-    --background-start-hex: var(--mantine-color-pink-5);
-    --background-end-hex: var(--mantine-color-pink-9);
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -94,6 +65,16 @@ body {
       var(--background-end-hex)
     )
     var(--mantine-color-body);
+
+  @mixin dark {
+    color: rgb(var(--foreground-hex-dark));
+    background: linear-gradient(
+        to bottom,
+        var(--background-start-hex-dark),
+        var(--background-end-hex-dark)
+      )
+      var(--mantine-color-body);
+  }
 }
 
 a {
@@ -101,7 +82,7 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+@mixin dark {
   html {
     color-scheme: dark;
   }
